--- a/index.html
+++ b/index.html
@@ -113,7 +113,20 @@
 
     <!--Footer Section Starts Here-->
     <section id="footer">
-        <div class="container"></div>
+        <div class="banner">
+            <div class="container">
+            <div class="banner-text">
+            <div class="banner-heading">
+                Safe, High-Yield <br>Investments
+            </div>
+            <div class="banner-sub-heading">
+                We provide access to safe, high-yield invenments for Africans (starting in Nigeria) with three products -<br><br>
+                <p><span class="subin">OVERWOOD PRIME, OVERWOOD DOLLAR, & OVERWOOD CHILD.<span></p>
+            </div>
+            <button type="button" class="btn btn-warning btn-banner">INVEST NOW</button>
+            </div>
+            </div>
+        </div>
     </section>
     <!--Footer Section Ends-->
 
