Did the banner and cards

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Poppins:400,500,600,700" rel="stylesheet"> 
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 
 <body>
@@ -63,12 +65,62 @@
         </div>
     </nav>
     </div>
-    <!--Landing Page Starts Here-->
-    <section id="home">
-        <div class="container"></div>
+     <!--Landing Page Starts Here-->
+     <section id="home">
+        <div class="banner">
+            <div class="container">
+            <div class="banner-text">
+            <div class="banner-heading">
+                Safe, High-Yield <br>Investments
+            </div>
+            <div class="banner-sub-heading">
+                We provide access to safe, high-yield invenments for Africans (starting in Nigeria) with three products -<br><br>
+                <span class="subin">OVERWOOD PRIME, OVERWOOD DOLLAR, & OVERWOOD CHILD.<span>
+            </div>
+            <button type="button" class="btn btn-warning btn-banner">INVEST NOW</button>
+            </div>
+            </div>
+        </div>
     </section>
     <!--Landing Page Ends-->
-
+    <!-- Card Section -->
+    <section class="services-area" id="services">
+		<div class="container pt-100 pb-70">
+			<div class="row">
+				<div class="col-lg-3 col-md-6">
+					<div class="single-service">
+						<img src="img/padlock.png">
+						<h4>Safety First.</h4>
+						<p>Fund safety is our most important<br> principle.</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6">
+					<div class="single-service">
+						<img src="img/bulb.png">
+						<h4>Good Returns.</h4>
+						<p>We achieve industry leading returns for our members.</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6">
+					<div class="single-service">
+						<img src="img/card.png" style=" height: 24.75px;
+                        width: 35px;">
+						<h4>Daily Dividends</h4>
+						<p>You accrue dividends and gains on a daily basis.</p>
+					</div>
+				</div>
+				<div class="col-lg-3 col-md-6">
+					<div class="single-service">
+						<img src="img/Headphone.png" style=" height: 25.7px;
+                        width: 35px;">
+						<h4>Compound Gains.</h4>
+						<p>Compound interest model increases your yield.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	  </section>
+    <!-- Card Section Ends-->
     <!--Mission Section Starts Here-->
     <section id="mission">
         <div class="container"></div>
